--- a/Pipfile
+++ b/Pipfile
@@ -11,6 +11,8 @@ flake8 = "~=3.8"
 django = "~=3.1"
 psycopg2 = "~=2.8"
 graphene-django = "~=2.0"
+python-dotenv = "~=0.14"
+django-filter = "~=2.4"
 
 [requires]
 python_version = "3.8"
