--- a/Pipfile
+++ b/Pipfile
@@ -13,6 +13,7 @@ psycopg2 = "~=2.8"
 graphene-django = "~=2.0"
 python-dotenv = "~=0.14"
 django-filter = "~=2.4"
+whitenoise = "~=5.2"
 
 [requires]
 python_version = "3.8"
