Integrate with Slack

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,7 @@
 BARISTA_DEBUG=false
 BARISTA_HOSTS=".uwcoffeencode.com"
+BARISTA_SLACK_CHANNEL=system
+BARISTA_SLACK_TOKEN=abc123
 BARISTA_USE_FORWARDED_HOST=false
 BARISTA_SECRET=abc123
 BARISTA_DB_NAME=barista
