--- a/Pipfile
+++ b/Pipfile
@@ -14,6 +14,10 @@ graphene-django = "~=2.0"
 python-dotenv = "~=0.14"
 django-filter = "~=2.4"
 whitenoise = "~=5.2"
+slack-sdk = ">=3.0.0rc1"
 
 [requires]
 python_version = "3.8"
+
+[pipenv]
+allow_prereleases = true
