Implement responding to Slack messages

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,10 @@
 BARISTA_DEBUG=false
 BARISTA_HOSTS=".uwcoffeencode.com"
-BARISTA_SLACK_CHANNEL=system
 BARISTA_SLACK_TOKEN=abc123
+BARISTA_SLACK_SECRET=abcd13
+BARISTA_SLACK_CHANNEL=system
 BARISTA_USE_FORWARDED_HOST=false
+BARISTA_LOG_LEVEL=info
 BARISTA_SECRET=abc123
 BARISTA_DB_NAME=barista
 BARISTA_DB_USER=postgres
