--- a/Pipfile
+++ b/Pipfile
@@ -15,6 +15,7 @@ python-dotenv = "~=0.14"
 django-filter = "~=2.4"
 whitenoise = "~=5.2"
 slack-sdk = ">=3.0.0rc1"
+slack-bolt = "==0.9.6b0"
 
 [requires]
 python_version = "3.8"
