Implement ReCaptcha verification for signup

--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,4 @@ BARISTA_DB_PASSWORD=abcd123
 BARISTA_DB_HOST=localhost
 BARISTA_DB_PORT=5432
 BARISTA_DB_SSLMODE=prefer
+BARISTA_RECAPTCHA_SECRET=abc123
