--- a/Pipfile
+++ b/Pipfile
@@ -16,6 +16,7 @@ django-filter = "~=2.4"
 whitenoise = "~=5.2"
 slack-sdk = ">=3.0.0rc1"
 slack-bolt = "==0.9.6b0"
+requests = "~=2.24"
 
 [requires]
 python_version = "3.8"
